sync kinda syncs?